@@ -7,6 +7,8 @@ Release 1.3
 #30 Execution refactoring: split stats in a separate class
 #31 Execution: support for a map of arbitrary 'attributes'
 #32 Task stage listeners
+#33 SourceKeysTask: a task for extraction of source keys
+
 
 Release 1.2 2014-12-08
 
